--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
     "gulp-less": "^3.3.2",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^3.0.0",
-    "swiper": "^3.0.0",
+    "swiper": "^3.0.0"
   }
 }
