--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-less": "^3.3.2",
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^3.0.0",
+    "jquery-ui-timepicker-addon": "^1.6.3",
     "swiper": "^3.0.0"
   }
 }
